--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "1.  Hi, my name is Gail. It is a pleasure to meet you!\n",
-      "2.  Hi, my name is Gail. It is a pleasure to meet you!\n"
+      "2.  Hi, my name is The Snail. It is a pleasure to meet you!\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
     "class Person():\n",
     "    \n",
     "    def introduce(self):\n",
-    "        return \"Hi, my name is Gail. It is a pleasure to meet you!\"\n",
+    "        return f\"Hi, my name is {self.name}. It is a pleasure to meet you!\"\n",
     "    \n",
     "    def say_hello(self):\n",
     "        return \"Hi, how are you?\"\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "\"Hi, my name is the Snail! What wildly overcast weather we're having, right?!\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
